--- a/.env
+++ b/.env
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=dika.15411036@student.ubl.ac.id
+MAIL_PASSWORD=123321sonidika
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=admineyelash@eyelash.com
+MAIL_FROM_NAME="Coco Eyelash"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
